Mon Jan 12 21:40:57 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/DCPS/Priority/publisher_main.cpp:
        * performance-tests/DCPS/Priority/subscriber_main.cpp:
        * tests/DCPS/Priority/publisher_main.cpp:
        * tests/DCPS/Priority/subscriber_main.cpp:

	  Hide unused catch parameter to remove compiler warnings.

Mon Jan 12 21:25:31 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:

          Remove value from return in a void method.

Mon Jan 12 19:00:48 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/framework/NullSynchStrategy.h:
        * dds/DCPS/transport/framework/NullSynchStrategy.cpp:
        * dds/DCPS/transport/framework/PoolSynchStrategy.h:
        * dds/DCPS/transport/framework/PoolSynchStrategy.cpp:

          Modify to use the modern signature for create_synch_object().

        * performance-tests/DCPS/Priority/PublicationProfile.cpp:

          Changed from the POSIX random() call to C98 rand() calls.

Fri Jan  9 21:22:52 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Explicitly cast a time_t value to a double to avoid compiler
          complaints.

        * dds/DCPS/Service_Participant.cpp:

          Elide use of String_Base::empty() since it is not present in
          1.4a, which is a supported version.

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.inl:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:
        * dds/DCPS/transport/simpleUnreliableDgram/SimpleUnreliableDgramTransport.cpp:

          Renamed priority() method to avoid hiding the base class
          Event_Handler::priority() method.

        * tests/DCPS/LatencyBudget/DataReaderListener.cpp:

          Modified to use renamed maximum and minimum LatencyStatistics fields.
