@@ -1,3 +1,11 @@
+Mon Jan 12 22:41:27 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
+
+        * performance-tests/DCPS/Priority/Options.cpp:
+        * tests/DCPS/Priority/Options.cpp:
+
+	  Explicitly use unsigned constants to intialize pairs to
+	  eliminate a Sun compiler error.
+
 Mon Jan 12 21:40:57 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
 
         * performance-tests/DCPS/Priority/publisher_main.cpp:
@@ -5,7 +13,7 @@ Mon Jan 12 21:40:57 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
         * tests/DCPS/Priority/publisher_main.cpp:
         * tests/DCPS/Priority/subscriber_main.cpp:
 
-	  Hide unused catch parameter to remove compiler warnings.
+          Hide unused catch parameter to remove compiler warnings.
 
 Mon Jan 12 21:25:31 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
 
